--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   isar_flutter_libs: ^3.1.0+1
   isar_generator: ^3.1.0+1
   path_provider: ^2.1.5
+  fluttertoast: ^9.0.0
 
 dev_dependencies:
   flutter_test:
