--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   isar_generator: ^3.1.0+1
   path_provider: ^2.1.5
   fluttertoast: ^9.0.0
+  shared_preferences: ^2.5.4
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
