--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   fpdart: ^1.2.0
   flutter_bloc: ^9.1.1
   go_router: ^17.0.1
-  google_fonts: ^7.1.0
+  google_fonts: ^8.0.1
   flutter_svg: ^2.2.3
   formz: ^0.8.0
   dio: ^5.9.0
@@ -53,6 +53,9 @@ dependencies:
   fluttertoast: ^9.0.0
   shared_preferences: ^2.5.4
   rxdart: ^0.28.0
+  slang: ^4.12.1
+  slang_flutter: ^4.12.1
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
